
Version 0.4u
------------
* More typos fixed (Fera). Thanks CK!
* Fixed a bug in the pregnancy code, making pregnancies not be correctly detected
* A real clever piece of code added by ElAcechador on Github, that allows you to see what alchemical recipes you can learn when talking to an alchemy NPC like Rosalin. Unknown recipes will be lined out in green, known recipes will be in blue

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4t
------------
* Another fuckton of typos and tweaks in old content
* Fixed parser error in Lizard tail fuck scene
* The status effects system has gone over a bit of a revamp.
 - Status effect spells such as Venom now work on a "wear-em-down" principle. Bosses will still be more resistant, but throwing the same spell a few times will consistently hit. Each time you miss, the enemy becomes more vulnerable to being hit with that status.
 - Status effects have been split up into four different categories: physical (red outline), magical (blue outline), lust (pink outline) and other (green outline).
 - Items can now provide status effect resistance. Green scented candle gives you poison resistance.
 - There are now a total of three status healing spells, all learned from level 2 magic jobs (Healer, Mystic, Mage).
 - Some status effects are going to be a bit overpowered for a while, until a more complete combat revamp can be enacted.
* Warlock job added. Learn from Jeanne.
* Swift should no longer be listed twice in the list of abilities if you have mastered it from both Rogue and Ranger.
* Barnaby the bartender added to Maidens' Bane. Written by LD and QB and sponsored by Patreon, about 10k words total.

Version 0.4s
------------
* Added a missing Terry-mpreg-pc trigger for his Worship -> Anal catch scene
* Made an adjustment to the run formula, which should work as intended now
* Meditation scenes added for the player, allowing you to drain lust